add mouse callback

--- a/tileable_texture_vizualizer.ipynb
+++ b/tileable_texture_vizualizer.ipynb
@@ -80,20 +80,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "def draw_roi(img, roi_rect, debug=True):\n",
-    "    cy, cx, h, w = roi_rect\n",
     "    COLOR = (255, 0, 0)\n",
     "    THICKNESS = 6\n",
+    "    cy, cx, h, w = roi_rect\n",
     "    img_drawn = cv2.rectangle(img.copy(), (cx-w//2, cy-h//2), (cx+w//2, cy+h//2), COLOR, THICKNESS)\n",
     "\n",
     "    if debug:\n",
     "        disp(img_drawn)\n",
     "\n",
-    "    return img_drawn"
+    "    return img_drawn\n",
+    "\n",
+    "def make_tile(img, roi_rect, tile_multiple=(4,4), debug=True):\n",
+    "    cy, cx, h, w = roi_rect\n",
+    "    roi = img[cy-h//2:cy+h//2, cx-w//2:cx+w//2, :]\n",
+    "\n",
+    "    # Tile the roi\n",
+    "    img_tiled = np.tile(roi, (*tile_multiple,1))\n",
+    "    img_tiled = img_tiled.astype(np.float32)\n",
+    "    img_tiled[:h, :w, :] *= 0.65\n",
+    "    img_tiled = img_tiled.astype(np.uint8)\n",
+    "\n",
+    "    if debug:\n",
+    "        disp(img_tiled)\n",
+    "    \n",
+    "    return roi"
    ]
   },
   {
@@ -150,28 +165,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make_tile(img, roi_rect, tile_multiple=(4,4), debug=True):\n",
-    "    cy, cx, h, w = roi_rect\n",
-    "    roi = img[cy-h//2:cy+h//2, cx-w//2:cx+w//2, :]\n",
-    "\n",
-    "    # Tile the roi\n",
-    "    img_tiled = np.tile(roi, (*tile_multiple,1))\n",
-    "    img_tiled = img_tiled.astype(np.float32)\n",
-    "    img_tiled[:h, :w, :] *= 0.65\n",
-    "    img_tiled = img_tiled.astype(np.uint8)\n",
-    "\n",
-    "    if debug:\n",
-    "        disp(img_tiled)\n",
-    "    \n",
-    "    return roi"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 84,
    "metadata": {},
    "outputs": [
@@ -188,15 +181,6 @@
    ],
    "source": [
     "tileable_img = make_tile(img, roi_rect)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"hi\")"
    ]
   }
  ],
